<?xml version="1.0"?>
<package format="2">
  <name>hokuyo_gazebo</name>
  <version>0.0.1</version>
  <description>The hokuyo_gazebo package</description>

  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <export>
    <!-- Other tools can go here -->
  </export>
</package>
